--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <div class="container" id="elmContainer">
   <div id="elm"></div>
 </div>
+<div class="test">
+  <div>
+    <div>
+      <input id="textPrompt" type="text">
+    </div>
+  </div>
+</div>
 <script type="text/javascript" src="index.js"></script>
 <script>
   var node = document.getElementById('elm');
